<resources>
    <string name="app_name">PictureThis</string>

    <string name="foodTextView1">Chicken Rice</string>
    <string name="foodTextView2">Nasi Lemak</string>
    <string name="foodTextView3">Fried Noodle</string>
    <string name="foodTextView4">Satay</string>
    <string name="creditTextView">Photos by Chan Siaw Zheng on Google Images</string>

    <string name="foodRating1">3</string>
    <string name="foodRating2">4</string>
    <string name="foodRating3">5</string>
    <string name="foodRating4">2</string>

    <string name="chickenrice">Chicken Rice</string>
    <string name="nasilemak">Nasi Lemak</string>
    <string name="friednoodle">Fried Noodle</string>
    <string name="satay">Satay</string>

    <string name="foodImageView">Food Image: </string>
    <string name="foodTextView">Food Name: </string>
    <string name="foodEditText" />
    <string name="cuisineTextView">Type of Cuisine: </string>
    <string name="cuisineEditText" />
    <string name="dateTextView">Date: </string>
    <string name="dateEditText">dd/mm/yyyy</string>
    <string name="ratingTextView">Rating: </string>
    <string name="updateButton">Update</string>



</resources>