<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/chickenrice"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/chickenrice"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/foodTextView1"
        app:layout_constraintEnd_toStartOf="@+id/nasilemak"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chickenrice" />

    <ImageView
        android:id="@+id/nasilemak"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/nasilemak"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/foodTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chickenrice"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nasilemak" />

    <ImageView
        android:id="@+id/friednoodle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/friednoodle"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/foodTextView3"
        app:layout_constraintEnd_toStartOf="@+id/satay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodRating1"
        app:srcCompat="@drawable/meegoreng" />

    <ImageView
        android:id="@+id/satay"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/satay"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/foodTextView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/friednoodle"
        app:layout_constraintTop_toBottomOf="@+id/foodRating2"
        app:srcCompat="@drawable/satay" />

    <TextView
        android:id="@+id/foodTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="135dp"
        android:gravity="center"
        android:text="@string/foodTextView1"
        app:layout_constraintBottom_toTopOf="@+id/foodRating1"
        app:layout_constraintEnd_toStartOf="@+id/foodTextView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chickenrice" />

    <TextView
        android:id="@+id/foodTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="66dp"
        android:gravity="center"
        android:text="@string/foodTextView2"
        app:layout_constraintBottom_toTopOf="@+id/foodRating2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/foodTextView1"
        app:layout_constraintTop_toBottomOf="@+id/nasilemak" />

    <TextView
        android:id="@+id/foodTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/foodTextView3"
        app:layout_constraintBottom_toTopOf="@+id/foodRating3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friednoodle" />

    <TextView
        android:id="@+id/foodTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="75dp"
        android:gravity="center"
        android:text="@string/foodTextView4"
        app:layout_constraintBottom_toTopOf="@+id/foodRating4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foodTextView3"
        app:layout_constraintTop_toBottomOf="@+id/satay" />

    <TextView
        android:id="@+id/creditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/creditTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/foodRating1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="185dp"
        android:gravity="center"
        android:text="@string/foodRating1"
        app:layout_constraintBottom_toTopOf="@+id/friednoodle"
        app:layout_constraintEnd_toStartOf="@+id/foodRating2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodTextView1" />

    <TextView
        android:id="@+id/foodRating2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="91dp"
        android:gravity="center"
        android:text="@string/foodRating2"
        app:layout_constraintBottom_toTopOf="@+id/satay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/foodRating1"
        app:layout_constraintTop_toBottomOf="@+id/foodTextView2" />

    <TextView
        android:id="@+id/foodRating3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/foodRating3"
        app:layout_constraintBottom_toTopOf="@+id/creditTextView"
        app:layout_constraintEnd_toStartOf="@+id/foodRating4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodTextView3" />

    <TextView
        android:id="@+id/foodRating4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/foodRating4"
        app:layout_constraintBottom_toTopOf="@+id/creditTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/foodRating3"
        app:layout_constraintTop_toBottomOf="@+id/foodTextView4" />

</androidx.constraintlayout.widget.ConstraintLayout>