<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Food">

    <ImageView
        android:id="@+id/foodImageView"
        android:layout_width="412dp"
        android:layout_height="274dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/foodImageView"
        android:gravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/foodEditText"
        app:layout_constraintEnd_toEndOf="@+id/foodEditText"
        app:layout_constraintStart_toStartOf="@+id/foodEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/alert_dark_frame" />

    <EditText
        android:id="@+id/foodEditText"
        android:layout_width="229dp"
        android:layout_height="46dp"
        android:layout_marginTop="37dp"
        android:autofillHints="FoodName"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/foodEditText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/cuisineEditText"
        app:layout_constraintStart_toStartOf="@+id/cuisineEditText"
        app:layout_constraintTop_toBottomOf="@+id/foodImageView" />

    <EditText
        android:id="@+id/cuisineEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:autofillHints="Type of Cuisine"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/cuisineEditText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/dateEditText"
        app:layout_constraintStart_toStartOf="@+id/dateEditText"
        app:layout_constraintTop_toBottomOf="@+id/foodEditText" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:autofillHints="Date"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/dateEditText"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/cuisineEditText" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>